# DataStructuresFinalProject

./: CMakeLists.txt  README.md  Red_Black_Tree.h  Report.txt  SDL_Plotter.cpp  SDL_Plotter.h  bigText.h  display.h  fullsizeAssets.cpp  fullsizeAssets.h  main.cpp
cmake/: FindSDL2.cmake
